changed gitignore to only exclude twitter data

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Misc
+# misc
 *.log
 npm-debug.*
 *.scssc
@@ -8,7 +8,11 @@ npm-debug.*
 .env
 .cache
 
-# Node modules and output
+# node modules and output
 node_modules
 dist
-src/_includes/css
+
+# twitter data files
+src/_data/tweets.json
+src/_data/twids.json
+src/_data/users.json
