--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,12 @@ npm-debug.*
 .sass-cache
 .env
 .cache
-src/_data/tweets.json
-src/_data/twids.json
-src/_data/users.json
 
 # Node modules and output
 node_modules
 dist
+
+# twitter data files
+src/_data/tweets.json
+src/_data/twids.json
+src/_data/users.json
